[project]
name = "yuming-school"
version = "0.1.0"
description = "Yu Ming Charter School discussion scraper + monitoring dashboard"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=5.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.66.0",
    "flask>=3.0.0",
    "jieba>=0.42.0",
    "mss>=10.2.0",
    "pyautogui>=0.9.54",
    "numpy>=2.4.6",
    "ipykernel>=7.3.0",
]
